--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "compromise": "^14.10.1",
+    "compromise-speech": "^0.1.0",
     "next": "14.0.3",
     "postgres": "^3.4.3",
     "random-words": "^2.0.0",
