--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.0.3",
+    "clsx": "^2.0.0",
     "compromise": "^14.10.1",
     "compromise-speech": "^0.1.0",
     "next": "14.0.3",
@@ -16,7 +18,9 @@
     "random-words": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-textfit": "^1.1.1"
+    "react-textfit": "^1.1.1",
+    "syllable": "^5.0.1",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
